+ improved generic getBundleContext() method + initial draft for lazy activation support (this time around just for namespace providers) + more generified clases + upgraded KF to 2.3.0